fixed spacing added headers

--- a/codeup-design.css
+++ b/codeup-design.css
@@ -7,6 +7,15 @@ body {
     background-color: #F0F0F0;
 }
 
+h1, h3{
+    font-family: 'Anton', sans-serif;
+}
+
+#nav-list a {
+    display: inline-block;
+    margin: 10px 12px;
+}
+
 ul{
     list-style: none;
 }
